--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -202,6 +202,12 @@ if(CLANG_FORMAT_EXECUTABLE)
         "${CMAKE_SOURCE_DIR}/include/*.hpp"
         "${CMAKE_SOURCE_DIR}/include/**/*.h"
         "${CMAKE_SOURCE_DIR}/include/**/*.hpp"
+        "${CMAKE_SOURCE_DIR}/test/*.h"
+        "${CMAKE_SOURCE_DIR}/test/*.hpp"
+        "${CMAKE_SOURCE_DIR}/test/*.cpp"
+        "${CMAKE_SOURCE_DIR}/test/**/*.h"
+        "${CMAKE_SOURCE_DIR}/test/**/*.hpp"
+        "${CMAKE_SOURCE_DIR}/test/**/*.cpp"
     )
     
     add_custom_target(format
